--- a/Develop/client/src/css/style.css
+++ b/Develop/client/src/css/style.css
@@ -191,6 +191,12 @@ h1 {
 .btn.btn-link:hover {
   background-color: #31a9e1;
 }
+/**
+   * Add the correct display in IE 10.
+   */
+   [hidden] {
+    display: none;
+  }
 
 @media only screen and (max-width: 600px) {
   .nav-btn {
